
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".CreateEmailActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/email_lblfrom"
                android:id="@+id/lblFrom"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/txtfrom"
                android:layout_below="@+id/lblFrom"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/email_lblTo"
                android:id="@+id/lblTo"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:paddingTop="10dp"
                android:layout_below="@+id/txtfrom" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/txtTo"
                android:layout_below="@+id/lblTo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/email_cc"
                android:id="@+id/lblCC"
                android:paddingTop="10dp"
                android:layout_below="@+id/txtTo"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/txtCC"
                android:layout_below="@+id/lblCC"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/email_lblBCC"
                android:id="@+id/lblBcc"
                android:paddingTop="10dp"
                android:layout_below="@+id/txtCC"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/txtBcc"
                android:layout_below="@+id/lblBcc"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/email_subject"
                android:id="@+id/lblSubject"
                android:layout_below="@+id/txtBcc"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtSubject"
                android:layout_below="@+id/lblSubject"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:inputType="textEmailSubject" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/email_body"
                android:id="@+id/lblBody"
                android:layout_below="@+id/txtSubject"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textMultiLine"
                android:gravity="top|left"
                android:id="@+id/txtBody"
                android:layout_below="@+id/lblBody"
                android:layout_above="@+id/btnLayout"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnLayout"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:gravity="bottom">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/email_btnSend"
                    android:id="@+id/btnSend"
                    android:layout_weight="1"
                    android:onClick="SendEmail"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/email_btnClear"
                    android:id="@+id/btnClear"
                    android:layout_weight="1"
                    android:onClick="ClearForm"/>
            </LinearLayout>
</RelativeLayout>